<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:visibility="visible"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="137dp"
        android:layout_height="56dp"
        android:text="@string/Bevan"
        android:textAlignment="inherit"
        android:textColor="@android:color/white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.057" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="115dp"
        android:layout_height="24dp"
        android:layout_marginTop="40dp"
        android:text="@string/username"
        android:textAlignment="inherit"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.132" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="115dp"
        android:layout_height="24dp"
        android:layout_marginTop="40dp"
        android:text="@string/password"
        android:textAlignment="inherit"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.274" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="332dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/Terms"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.547" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="212dp"
        android:layout_height="34dp"
        android:layout_marginTop="40dp"
        android:text="@string/Sign_up"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.875" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="192dp"
        android:layout_height="32dp"
        android:layout_marginTop="50dp"
        android:text="@string/go_back"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.769" />

    <TextView
        android:hint=""
        android:id="@+id/textView5"
        android:layout_width="178dp"
        android:layout_height="35dp"
        android:layout_marginTop="40dp"
        android:text="@string/forgot_pass"
        android:textAlignment="textEnd"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.944"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.418" />

    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="43dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="376dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/log_in"
        android:textColor="#FFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:hint="@string/username"
        android:layout_width="382dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="136dp"
        android:background="@drawable/text_input"
        android:inputType="text"
        android:textColor="#FFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="382dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="212dp"
        android:autofillHints=""
        android:background="@drawable/text_input"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#FFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>